--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <a href="https://www.linkedin.com/in/dipesh-dawadi-180717340/" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://www.instagram.com/dipesh.s2059/" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <div class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
-                    <button>Hire me</button>
+              <div> <a href="mailto:alegendofnoob@gmail.com" class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
+                    <button>Hire me <i class="fa-solid fa-envelope"></i></button>
                 </div>
             </div>
         </div>
