--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <div class="logo" data-aos="zoom-in" data-aos-duration="1500">
                 Dipesh <span>Dawadi</span>
             </div>
-            <div class="links">
-                <!-- <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="#">Home</a></div>
+            <!-- <div class="links">
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="#">Home</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="#">About</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#">Skills</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="#">Services</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="#">Contact</a></div> -->
-        </div>
-        <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
+                <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="#">Contact</a></div>
+        </div> -->
+        <!-- <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
     </div>
         <div class="dropdown">
             <div class="links">
@@ -31,7 +31,7 @@
                 <a href="#">Service</a>
                 <a href="#">Contact</a>
                 <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
-            </div>
+            </div> -->
         </div>
     </nav>
     <section>
