--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <div class="typewriter" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="900">I'm a <span class="typewriter-text"></span><label for="">|</label></div>
                 <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100">I'm a passionate beginner developer diving into the world of web development with the MERN stack (MongoDB, Express.js, React.js, and Node.js). Currently, I’m exploring the fundamentals of creating dynamic, full-stack web applications.<br>
                     My learning journey involves building small projects, experimenting with APIs, and honing my JavaScript skills. I’m excited about problem-solving, creating intuitive user interfaces, and growing as a developer every day.<br>
-                   </p> <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1100"> Let’s connect and share knowledge as I embark on this exciting tech adventure!</p>
+                   </p> <p> Let’s connect and share knowledge as I embark on this exciting tech adventure!</p>
                 <div class="social-links">
-                    <a href="https://github.com/dipeshsince2059" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.facebook.com/dipesh.s2059" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.linkedin.com/in/dipesh-dawadi-180717340/" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/dipesh.s2059/" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/dipeshsince2059" ><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.facebook.com/dipesh.s2059" ><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/dipesh-dawadi-180717340/" ><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/dipesh.s2059/" ><i class="fa-brands fa-instagram"></i></a>
                 </div>
-              <div> <a href="mailto:alegendofnoob@gmail.com" class="btn" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1800">
+              <div> <a href="mailto:alegendofnoob@gmail.com" class="btn" >
                     <button>Hire me <i class="fa-solid fa-envelope"></i></button>
                 </div>
             </div>
